added auth for user, included: func 'remember me' at auth

--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -36,7 +36,7 @@
                                 <button type="submit" class="btn btn-success">
                                     <span>LOG IN</span>
                                 </button>
-                                <a href="{{ path('app_registration') }}" class="btn btn-link btn-dark">
+                                <a href="{{ path('main_registration') }}" class="btn btn-link btn-dark">
                                     <i class="fas fa-user"></i>
                                     <span>Create an account</span>
                                 </a>
