--- a/templates/admin/_embed/_card/_form_buttons.html.twig
+++ b/templates/admin/_embed/_card/_form_buttons.html.twig
@@ -5,7 +5,7 @@
         </a>
         <button type="submit" class="btn btn-primary">Save changes</button>
     </div>
-    {% if entity %}
+    {% if entity and entity.id %}
         <a class="btn btn-white" data-toggle="modal" data-target="#{{ modalId }}">
             <i class="fas fa-times fa-sm">Delete row</i>
         </a>
