--- a/templates/admin/_embed/_utils/_flash_message.html.twig
+++ b/templates/admin/_embed/_utils/_flash_message.html.twig
@@ -1,4 +1,4 @@
-{% for label, messages in app.flashes(['success', 'warning', 'info']) %}
+{% for label, messages in app.flashes(['success', 'warning', 'info', 'danger']) %}
     {% for message in messages %}
         <div class="alert alert-{{ label }} text-center">
             {{ message }}
