Added links for footer of site Added logout for admin-panel Catalogs refactor

--- a/templates/main/default/index.html.twig
+++ b/templates/main/default/index.html.twig
@@ -101,4 +101,9 @@
             </div>
         </div>
     </div>
+
+    {{ render(controller('App\\Controller\\Main\\EmbedController::showSimilarProducts', {
+        productCount: 4,
+        resultShuffle: true
+    })) }}
 {% endblock %}
