--- a/templates/main/_embed/_similar_products.html.twig
+++ b/templates/main/_embed/_similar_products.html.twig
@@ -1,49 +1,46 @@
-{% extends 'main/base.html.twig' %}
-
-{% block title %}{{ category.title }} - RankedChoice{% endblock %}
-{% block page_keywords %}Jeans, Ranked Choice Homepage, Jackets{% endblock %}
-{% block page_description %}Category page of RankedChoice shop!{% endblock %}
-
-{% block body %}
-    <div class="text-center">
-        <div class="container mt-3 mb-2">
-            <div class="row">
-                <div class="col-lg-12 mb-2">
-                    <div class="page-title2">
-                        <a class="page-title title-gradient-1">...</a>
-                    </div>
-                </div>
+{% set productsCount = products|length %}
+{% if productsCount %}
+    <div class="pt-2 pb-2">
+        <div class="container-fluid">
+            <div class="text-center mb-3">
+                <h2 class="title">We recommend</h2>
             </div>
-        </div>
-        <div class="container">
             <div class="row">
                 <div class="col-lg-12">
-                    <div class="product-list mb-3">
-                        <div class="row justify-content-center">
+                    <div class="product-list">
+                        <div class="row">
                             {% for product in products %}
-                            {% set images = product.getProductImages.getValues() %}
+                                {% set images = product.getProductImages().getValues() %}
                                 {% if images|length %}
-                                    {% set cover = images[0] %}
-                                    {% set linkProduct = path('main_product_show', {uuid: product.uuid}) %}
+                                {% set cover = images[0] %}
+                                    {% if productsCount <= 4 %}
                                     <div class="col-6 col-md-4 col-lg-4 col-xl-3">
-                                        <div class="product-item">
+                                        {% elseif productsCount > 4 %}
+                                    <div class="col-5 col-md-3 col-lg-3 col-xl-2">
+                                    {% endif %}
+                                    {% set linkProduct = path('main_product_show', {uuid: product.uuid}) %}
+                                        <div class="product-item text-center">
                                             <figure class="product-media">
                                                 <span class="product-sale-status sale-status-new">New</span>
                                                 <a href="{{ linkProduct }}">
-                                                    <img src="{{ asset('uploads/images/products/' ~ product.id ~ '/' ~ cover.filenameMiddle) }}" alt="{{ product.title }}" class="product-image">
+                                                    <img src="{{ asset('uploads/images/products/' ~ product.id ~ '/' ~ cover.getFilenameMiddle()) }}"
+                                                        alt="{{ product.title }}"
+                                                        class="product-image">
                                                 </a>
+
                                                 <div class="product-actions">
                                                     <a href="#" class="btn-add-to-cart">
                                                         add to cart
                                                     </a>
                                                 </div>
                                             </figure>
+
                                             <div class="product-card-content">
                                                 <h3 class="product-title">
                                                     <a href="{{ linkProduct }}">{{ product.title }}</a>
                                                 </h3>
                                                 <div class="product-price justify-content-center">
-                                                    {{ product.price|format_currency('USD') }}
+                                                    ${{ product.price }}
                                                 </div>
                                             </div>
                                         </div>
@@ -56,4 +53,5 @@
             </div>
         </div>
     </div>
-{% endblock %}
+{% endif %}
+
