Created a cart Added links for the home page of site Test: added one cookie for test from route name of homepage (guest_uuid)

--- a/templates/main/_embed/_footer.html.twig
+++ b/templates/main/_embed/_footer.html.twig
@@ -20,7 +20,7 @@
                             <a href="{{ path('main_login') }}">Sign in</a>
                         </li>
                         <li>
-                            <a href="#">View cart</a>
+                            <a href="{{ path('main_cart_show') }}">View cart</a>
                         </li>
                         <li>
                             <a href="{{ path('main_profile_index') }}">My profile</a>
