--- a/templates/main/cart/show.html.twig
+++ b/templates/main/cart/show.html.twig
@@ -78,7 +78,7 @@
                                             Total: <strong>{{ mainTotal|format_currency('USD') }}</strong>
                                         </div>
 
-                                        <a href="" class="btn btn-success mb-3 text-white">
+                                        <a href="{{ path('main_cart_create') }}" class="btn btn-success mb-3 text-white">
                                             MAKE ORDER
                                         </a>
                                     {% else %}
