Added and set up webpack for site (uncompiled files in a folder assets)

--- a/templates/main/category/show.html.twig
+++ b/templates/main/category/show.html.twig
@@ -58,7 +58,7 @@
     </div>
 {% endblock %}
 {% block javascripts %}
-<script src="{{ asset('build/axios.min.js') }}"></script>
+<script src="{{ asset('utils/axios/axios.min.js') }}"></script>
 <script>
     const urlSaveProductToCart = '{{ path("main_api_cart_save") }}';
 
