--- a/templates/main/security/registration.html.twig
+++ b/templates/main/security/registration.html.twig
@@ -43,10 +43,20 @@
                         </div>
 
                         {{ form_end(registrationForm) }}
+
+                        <div class="form-additional mt-2 pt-1">
+                            <div class="row">
+                                <div class="col-sm-12 text-center">
+                                    <a href="{{ path('connect_google_start') }}" class="btn btn-link btn-dark">
+                                        Login with Google
+                                    </a>
+                                </div>
+                            </div>
+                        </div>
+
                     </div>
                 </div>
             </div>
         </div>
     </div>
 {% endblock %}
-
