--- a/templates/admin/user/list.html.twig
+++ b/templates/admin/user/list.html.twig
@@ -24,6 +24,7 @@
                         <th>Address</th>
                         <th>Zip code</th>
                         <th>Is verified email</th>
+                        <th>From Google</th>
                         <th></th>
                     </tr>
                     </thead>
@@ -61,6 +62,11 @@
                                     not
                                 {% endif %}
                                 verified
+                            </td>
+                            <td>
+                                {% if user.googleId %}
+                                    <strong>+</strong>
+                                {% endif %}
                             </td>
                             <td>
                                 <a href="{{ path('admin_user_edit', {'id': user.id}) }}" class="btn btn-outline-info">Edit</a>
