--- a/templates/main/_embed/_footer.html.twig
+++ b/templates/main/_embed/_footer.html.twig
@@ -28,6 +28,18 @@
                     </ul>
                 </div>
                 <div class="col-sm-12 mt-3">
+                    <h4 class="widget-title">Change language</h4>
+                    <ul class="widget-list">
+                        <li>
+                            <a href="{{ path('main_homepage', {_locale: 'en'}) }}">{{'en'|locale_name('en')|capitalize}}</a>
+                        </li>
+                        <li>
+                            <a href="{{ path('main_homepage', {_locale: 'ru'}) }}">{{'ru'|locale_name('ru')|capitalize}}</a>
+                            {# path(app.request.attributes.get('_route') #}
+                        </li>
+                    </ul>
+                </div>
+                <div class="col-sm-12 mt-3">
                     <p class="widget-copyright">Copyright © RankedChoice Team. All Rights Reserved.</p>
                 </div>
             </div>
