1. Configured the package Symfony Messenger 2. Password recovery was made async 3. Email confirmation was made async

--- a/templates/main/email/security/confirmation_email.html.twig
+++ b/templates/main/email/security/confirmation_email.html.twig
@@ -1,11 +1,43 @@
-<h1>Hi! Please confirm your email!</h1>
+{% extends 'main/email/base.html.twig '%}
 
-<p>
-    Please confirm your email address by clicking the following link: <br><br>
-    <a href="{{ signedUrl }}">Confirm my Email</a>.
-    This link will expire in {{ expiresAtMessageKey|trans(expiresAtMessageData, 'VerifyEmailBundle') }}.
-</p>
-
-<p>
-    Cheers!
-</p>
+{% block content %}
+<div>
+    <row>
+        <columns>
+            <spacer size="35">
+                <center>
+                    <h1>{{ h1Title }}</h1>
+                </center>
+            </spacer>
+            <spacer size="10"></spacer>
+        </columns>
+    </row>
+    <row>
+        <columns>
+            <center>
+                <p>
+                    Hello, {{ user.fullName }}!
+                    Please confirm your email address by clicking the following link: <br><br>
+                    <a href="{{ signedUrl }}">Confirm my Email</a>.
+                    This link will expire in {{ expiresAtMessageKey|trans(expiresAtMessageData, 'VerifyEmailBundle') }}.
+                </p>
+            </center>
+        </columns>
+    </row>
+    <row>
+        <columns>
+            <center>
+                <p>
+                    Cheers!
+                </p>
+            </center>
+        </columns>
+    </row>
+    <row>
+        <columns>
+            <a href="{{ profileUrl }}" target="_blank">
+                Visit our profile
+            </a>
+        </columns>
+    </row>
+{% endblock %}
