--- a/templates/main/email/security/reset_password.html.twig
+++ b/templates/main/email/security/reset_password.html.twig
@@ -14,6 +14,8 @@
 <spacer size="30"></spacer>
 <row>
     <columns>
+        <p>Hello, {{ user.fullName }}!/p>
+
         <p>To reset your password, please visit the following link</p>
 
         <a href="{{ url('main_reset_password', {token: resetToken.token}) }}">{{ url('main_reset_password', {token: resetToken.token}) }}</a>
