--- a/templates/admin/order/list.html.twig
+++ b/templates/admin/order/list.html.twig
@@ -26,7 +26,7 @@
                     </tr>
                     </thead>
                     <tbody>
-                    {% for order in orders %}
+                    {% for order in pagination.items %}
                         <tr>
                             <td>
                                 {{ order.id }}
@@ -53,6 +53,9 @@
                     {% endfor %}
                     </tbody>
                 </table>
+            </div>
+            <div class="navigation">
+                {{ knp_pagination_render(pagination) }}
             </div>
         </div>
     </div>
